--- a/HaeChan/Week2/navbar.html
+++ b/HaeChan/Week2/navbar.html
@@ -6,13 +6,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Youtube Clone</title>
+    <link rel="stylesheet" href="./style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 </head>
  
 <body>
-    <header>
-        <div>
-            <button>
-                <span>
+    <nav class="flex">
+        <div class="flex">
+            <button class="nav-button">
+                <span class="nav-icon">
                     <svg viewBox="0 0 24 24" preserveAspectRatio="xMidYMid meet" focusable="false"
                         class="style-scope yt-icon"
                         style="pointer-events: none; display: block; width: 100%; height: 100%;">
@@ -23,8 +27,10 @@
                     </svg>
                 </span>
             </button>
-            <a href="https://www.youtube.com/">
-                <span>
+
+            <!-- 유튜브 링크 -->
+            <a href="https://www.youtube.com/" class="flex">
+                <span id="logo">
                     <svg viewBox="0 0 97 20" preserveAspectRatio="xMidYMid meet" focusable="false"
                         class="style-scope yt-icon"
                         style="pointer-events: none; display: block; width: 100%; height: 100%;">
@@ -65,14 +71,15 @@
                         </g>
                     </svg>
                 </span>
-                <span>KR</span>
+                <span id="nav-country">KR</span>
             </a>
         </div>
-        <div>
-            <form>
-                <input type="text">
-                <button>
-                    <span>
+
+        <div class="flex nav-center">
+            <form id="search-form" class="flex">
+                <input type="text" placeholder="Search">
+                <button class="nav-button flex">
+                    <span class="nav-icon">
                         <svg viewBox="0 0 24 24" preserveAspectRatio="xMidYMid meet" focusable="false"
                             class="style-scope yt-icon"
                             style="pointer-events: none; display: block; width: 100%; height: 100%;">
@@ -83,10 +90,11 @@
                             </g>
                         </svg>
                     </span>
+                
                 </button>
             </form>
-            <button>
-                <span>
+            <button class="nav-button" id="mic_btn">
+                <span class="nav-icon">
                     <svg viewBox="0 0 24 24" preserveAspectRatio="xMidYMid meet" focusable="false"
                         class="style-scope yt-icon"
                         style="pointer-events: none; display: block; width: 100%; height: 100%;">
@@ -99,9 +107,10 @@
                 </span>
             </button>
         </div>
-        <div>
-            <button>
-                <span>
+
+        <div class="flex nav-right">
+            <button class="nav-button">
+                <span class="nav-icon">
                     <svg viewBox="0 0 24 24" preserveAspectRatio="xMidYMid meet" focusable="false"
                         class="style-scope yt-icon"
                         style="pointer-events: none; display: block; width: 100%; height: 100%;">
@@ -113,8 +122,8 @@
                     </svg>
                 </span>
             </button>
-            <button>
-                <span>
+            <button class="nav-button">
+                <span class="nav-icon">
                     <svg viewBox="0 0 24 24" preserveAspectRatio="xMidYMid meet" focusable="false"
                         class="style-scope yt-icon"
                         style="pointer-events: none; display: block; width: 100%; height: 100%;">
@@ -126,8 +135,8 @@
                     </svg>
                 </span>
             </button>
-            <button>
-                <span>
+            <button class="nav-button">
+                <span class="nav-icon">
                     <svg viewBox="0 0 24 24" preserveAspectRatio="xMidYMid meet" focusable="false"
                         class="style-scope yt-icon"
                         style="pointer-events: none; display: block; width: 100%; height: 100%;">
@@ -139,14 +148,13 @@
                     </svg>
                 </span>
             </button>
-            <button>
-                <span>
-                    <img id="img" class="style-scope yt-img-shadow" alt="아바타 이미지" height="32" width="32"
-                        src="https://yt3.ggpht.com/yti/APfAmoFjoi5B8bE0j5805xHwq1nnfHaRErC54Tcwrre3=s88-c-k-c0x00ffffff-no-rj-mo">
-                </span>
+
+            <button class="nav-button flex" id="profile-btn">
+                <img id="img" class="style-scope yt-img-shadow" alt="아바타 이미지" height="32" width="32"
+                    src="https://yt3.ggpht.com/yti/APfAmoFjoi5B8bE0j5805xHwq1nnfHaRErC54Tcwrre3=s88-c-k-c0x00ffffff-no-rj-mo">
             </button>
         </div>
-    </header>
+    </nav>
 
 </body>
 
