220415_6주차_평창보리
6주차 키워드 :
LocalStorage, JSON, 파싱

--- a/HaeChan/Week6/youtube_heachan/navbar.html
+++ b/HaeChan/Week6/youtube_heachan/navbar.html
@@ -377,7 +377,10 @@
                                 <p class="vedioTitle"
                                     aria-label="윤하 노래 모음 【플레이리스트】 게시자: 로가드 - Lowguard 2개월 전 1시간 29분 조회수 121,620회"
                                     title="윤하 노래 모음 【플레이리스트】">
-                                    윤하 노래 모음 【플레이리스트】
+                                    윤하 노래 모음 【플레이리스트】윤하 노래 모음 
+                                    【플레이리스트】윤하 노래 모음 【플레이리스트】윤하 노래 모음 【플레이리스트】윤하 노래 모음 【플레이리스트】윤하 노래 모음 【플레이리스트】윤하 노래 모음 【플레이리스트】윤하 노래 모음 【플레이리스트】
+                                    윤하 노래 모음 【플레이리스트】윤하 노래 모음
+                                     【플레이리스트】윤하 노래 모음 【플레이리스트】윤하 노래 모음 【플레이리스트】윤하 노래 모음 【플레이리스트】윤하 노래 모음 【플레이리스트】윤하 노래 모음 【플레이리스트】
                                 </p>
                                 <div class="videoMetaData">
                                     <p class="metaText">로가드 - Lowguard</p>
