--- a/HaeChan/Week8/youtube_heachan/index.html
+++ b/HaeChan/Week8/youtube_heachan/index.html
@@ -175,8 +175,6 @@
                     </span>
             </a>
             </li>
-            </ul>
-            <ul class="sideCategoryList">
                 <li class="sideCategoryItem">
                     <a href="/" class="sideCategoryContainer">
                     <span class="sideCategoryIcon">
@@ -186,8 +184,6 @@
                     </span>
             </a>
             </li>
-            </ul>
-            <ul class="sideCategoryList">
                 <li class="sideCategoryItem">
                     <a href="/" class="sideCategoryContainer">
                     <span class="sideCategoryIcon">
@@ -197,8 +193,6 @@
                     </span>
             </a>
             </li>
-            </ul>
-            <ul class="sideCategoryList">
                 <li class="sideCategoryItem">
                     <a href="/" class="sideCategoryContainer">
                     <span class="sideCategoryIcon">
@@ -208,8 +202,6 @@
                     </span>
             </a>
             </li>
-            </ul>
-            <ul class="sideCategoryList">
                 <li class="sideCategoryItem">
                     <a href="/" class="sideCategoryContainer">
                     <span class="sideCategoryIcon">
@@ -219,9 +211,6 @@
                     </span>
             </a>
             </li>
-            </ul>
-
-            <ul class="sideCategoryList">
                 <li class="sideCategoryItem">
                     <a href="/" class="sideCategoryContainer">
                     <span class="sideCategoryIcon">
@@ -231,8 +220,6 @@
                     </span>
             </a>
             </li>
-            </ul>
-            <ul class="sideCategoryList">
                 <li class="sideCategoryItem">
                     <a href="/" class="sideCategoryContainer">
                     <span class="sideCategoryIcon">
@@ -242,8 +229,6 @@
                     </span>
             </a>
             </li>
-            </ul>
-            <ul class="sideCategoryList">
                 <li class="sideCategoryItem">
                     <a href="/" class="sideCategoryContainer">
                     <span class="sideCategoryIcon">
@@ -321,10 +306,10 @@
             </div>
         </div>
 
-
     </main>
 
-        
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script> 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/luxon/2.4.0/luxon.min.js"></script>
     <script src="index.js"></script>
 
 </body>
